--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background-color: bisque;
+    background-color: rgba(176, 233, 162, 0.404);
+    font-family: 'Barlow';
 }
 header{
     text-align: center;
