added profile img

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: rgba(176, 233, 162, 0.404);
+    background-color: rgba(196, 231, 240, 0.404);
     font-family: 'Barlow';
 }
 .mainNav{
@@ -18,7 +18,7 @@ header{
     margin: 60px 100px 120px 100px;
     padding: 200px;
     text-align: center;
-background-color: royalblue;
+background-color: rgb(240, 222, 239);
 }
 .hello, .thanks{
     display: inline;
@@ -26,6 +26,11 @@ background-color: royalblue;
 }
 hr{
     border-bottom: slategrey;
+}
+.profilePic{
+    height: 200px;
+    width:180px;
+justify-content: right;
 }
 .fullSection{
     padding:100px 0 200px 0;
